--- a/templates/nostrnfcauth/_api_docs.html
+++ b/templates/nostrnfcauth/_api_docs.html
@@ -1,15 +1,17 @@
 <q-expansion-item
   group="extras"
   icon="swap_vertical_circle"
-  label="About Bolt Cards"
+  label="About Nostr NFC Auth"
   :content-inset-level="0.5"
 >
   <q-card>
     <q-card-section>
-      <h5 class="text-subtitle1 q-my-none">Be your own card association</h5>
+      <h5 class="text-subtitle1 q-my-none">Tap to Auth</h5>
       <p>
-        Manage your Nostr cards in a self custodian way<br />
-
+        <br />
+          This extension uses NDEF Ntag 424 tags to cryptographically link a tag to an npub.
+          <br/>
+          The card can be used to authenticate a user with Nostr.
         <a class="text-secondary" href="https://github.com/blackcoffeexbt/nostrnfcauth"
           >More details</a
         >
