--- a/templates/nostrnfcauth/index.html
+++ b/templates/nostrnfcauth/index.html
@@ -174,7 +174,7 @@
     <q-card>
       <q-card-section>
         <h6 class="text-subtitle1 q-my-none">
-          {{SITE_TITLE}} Bolt Cards extension
+          Nostr Tap To Auth extension
         </h6>
       </q-card-section>
       <q-card-section class="q-pa-none">
